Update projects and enhance Bootstrap framework
- Updated project references in `AspireSample.ApiService.csproj` to use `Microsoft.AspNetCore.OpenApi` v9.0.5.
- Removed the weather forecast endpoint in `Program.cs`, replacing it with a root endpoint.
- Added PostgreSQL connection settings in `appsettings.json`.
- Updated `AspireSample.AppHost.csproj` to reference `AspireSample.Web.csproj` and upgraded hosting packages.
- Enhanced Redis cache configuration and added PostgreSQL to the builder in `Program.cs`.
- Introduced new health check commands for Redis in `RedisResourceBuilderExtensions.cs`.
- Updated `AspireSample.ServiceDefaults.csproj` and `AspireSample.Tests.csproj` with newer package versions.
- Added new Razor Pages and updated layout/styling files in `AspireSample.Web`.
- Configured the web application with Razor Pages and HTTP client settings in `Program.cs`.
- Added new launch settings for HTTP and HTTPS profiles.
- Introduced `ApiServiceClient` class for API calls.
- Created `appsettings.Development.json` for detailed error logging.
- Updated `appsettings.json` with API endpoint configurations.
- Added a favicon and updated the `LICENSE` file with MIT License details.
- Enhanced Bootstrap framework with new utility classes, RTL support, and improved source maps.
- Updated jQuery library to v3.7.1, removing AJAX features for a slimmer version.

--- a/AspireSample/AspireSample.ApiService/appsettings.json
+++ b/AspireSample/AspireSample.ApiService/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Aspire": {
+    "Npgsql": {
+      "EntityFrameworkCore": {
+        "PostgreSQL": {
+          "ConnectionString": "Host=myserver;Database=catalogdb;User id=myuser;Password=mypassword",
+          "MaxRetryCount": 0,
+          "HealthChecks": false,
+          "Tracing": false
+        }
+      }
+    }
+  },
 }
