Add PostgreSQL support and enhance application logging
- Updated `AspireSample.ApiService.csproj` to include
  `Aspire.Npgsql.EntityFrameworkCore.PostgreSQL` package.

- Introduced `CatalogDbContext` for managing database context.

- Modified `Program.cs` to integrate PostgreSQL context and
  added lifecycle hooks for improved logging.

- Updated `appsettings.json` for enhanced monitoring with
  health checks, tracing, and metrics.

- Adjusted Redis cache configuration for flexible deployment.

- Changed PostgreSQL database name from `catalogdb` to
  `catalog` and updated API cache invalidation key.

- Added new `/apiservice` endpoint for data retrieval.

--- a/AspireSample/AspireSample.ApiService/appsettings.json
+++ b/AspireSample/AspireSample.ApiService/appsettings.json
@@ -10,12 +10,13 @@
     "Npgsql": {
       "EntityFrameworkCore": {
         "PostgreSQL": {
-          "ConnectionString": "Host=myserver;Database=catalogdb;User id=myuser;Password=mypassword",
+          //"ConnectionString": "Host=myserver;Database=postgresdb;User id=myuser;Password=mypassword",
           "MaxRetryCount": 0,
-          "HealthChecks": false,
-          "Tracing": false
+          "HealthChecks": true,
+          "Tracing": true,
+          "Metrics": true
         }
       }
     }
-  },
+  }
 }
