--- a/AspireSample/AspireSample.ApiService/AspireSample.ApiService.csproj
+++ b/AspireSample/AspireSample.ApiService/AspireSample.ApiService.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
   </ItemGroup>
 
