--- a/AspireSample/AspireSample.AppHost/appsettings.json
+++ b/AspireSample/AspireSample.AppHost/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dcp": "Warning"
     }
+  },
+  "Parameters": {
+    "ApiCacheInvalidationKey": "key"
+  },
+  "ConnectionStrings": {
+    "cache": "cache"
   }
 }
