Add OpenTelemetry support and enhance application lifecycle
- Configured OpenTelemetry exporter in `Program.cs` with API key.
- Updated `appsettings.json` to include `OTLP_API_KEY`.
- Introduced `LifecycleLogger` for logging lifecycle events.
- Modified `launchSettings.json` for new dashboard auth variables.
- Enhanced `ApiServiceTests` and `WebTests` for async lifecycle management.
- Updated `ApiServiceClient` to utilize OTLP API key.
- Adjusted `AspireTutorial.sln` for new project references.
- Added Docker network removal command in `Commands.md`.
- Included diagnostic binary files for troubleshooting.

--- a/AspireSample/AspireSample.Web/appsettings.json
+++ b/AspireSample/AspireSample.Web/appsettings.json
@@ -7,5 +7,6 @@
   },
   "AllowedHosts": "*",
   "ApiEndpoint": "http://apiservice",
-  "ApiEndpointHttps": "https://apiservice"
+  "ApiEndpointHttps": "https://apiservice",
+  "OTLP_API_KEY": "AspireSampleApiKey"
 }
