--- a/AspireSample/AspireSample.AppHost/Properties/launchSettings.json
+++ b/AspireSample/AspireSample.AppHost/Properties/launchSettings.json
@@ -10,7 +10,9 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21092",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22107"
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22107",
+        "DASHBOARD__OTLP__AUTHMODE": "ApiKey",
+        "DASHBOARD__OTLP__PRIMARYAPIKEY": "AspireSampleApiKey"
       }
     },
     "http": {
@@ -22,7 +24,9 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19107",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20117"
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20117",
+        "DASHBOARD__OTLP__AUTHMODE": "ApiKey",
+        "DASHBOARD__OTLP__PRIMARYAPIKEY": "AspireSampleApiKey"
       }
     }
   }
