--- a/AspireSample/AspireSample.AppHost/appsettings.json
+++ b/AspireSample/AspireSample.AppHost/appsettings.json
@@ -11,5 +11,17 @@
   },
   "ConnectionStrings": {
     "cache": "cache"
+  },
+  "Dashboard": {
+    "TelemetryLimits": {
+      "MaxLogCount": 1000,
+      "MaxTraceCount": 1000,
+      "MaxMetricsCount": 1000
+    },
+    //"Otlp": {
+    //  "Cors": {
+    //    "AllowedOrigins": "http://localhost:5000,https://localhost:5001"
+    //  }
+    //}
   }
 }
