Add Redis caching and WorkerService project
- Introduced `Aspire.StackExchange.Redis.DistributedCaching` package.
- Enhanced `Program.cs` to support Redis caching and improved Npgsql configuration.
- Implemented middleware for request timeouts and output caching.
- Created a new `WorkerService` project with a logging worker.
- Updated `appsettings.json` for HTTPS preference and added logging configurations.
- Included health check endpoints for development environments.
- Refactored test classes for better readability and resilience.
- Updated solution file to include the new WorkerService project.

--- a/AspireSample/AspireSample.AppHost/AspireSample.AppHost.csproj
+++ b/AspireSample/AspireSample.AppHost/AspireSample.AppHost.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AspireSample.ApiService\AspireSample.ApiService.csproj" />
     <ProjectReference Include="..\AspireSample.Web\AspireSample.Web.csproj" />
+    <ProjectReference Include="..\AspireSample.WorkerService\AspireSample.WorkerService.csproj" />
   </ItemGroup>
 
   <ItemGroup>
