--- a/AspireSample/AspireSample.Web/appsettings.json
+++ b/AspireSample/AspireSample.Web/appsettings.json
@@ -6,7 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiEndpoint": "http://apiservice",
-  "ApiEndpointHttps": "https://apiservice",
+  "ApiEndpoint": "https+http://apiservice",
   "OTLP_API_KEY": "AspireSampleApiKey"
 }
