Update project structure and configuration settings
- Enhanced `.editorconfig` with C# coding conventions and diagnostics.
- Updated `AspireSample.AppHost.csproj` to reference `AspireSample.Catalog.Api` and added RabbitMQ package.
- Modified `LifecycleEvents.cs` for event logging.
- Refactored `Program.cs` to centralize event handling with `AddCacheEvents`.
- Added `CatalogDbContext.cs` for database context management.
- Created `AspireSample.Catalog.Api.csproj` for new web API.
- Updated configuration files for logging and connection settings.
- Upgraded `AspireSample.ServiceDefaults.csproj` to newer service discovery version.
- Enabled service discovery and OpenTelemetry in `Extensions.cs`.
- Renamed and updated `CatalogServiceTests.cs` for new API.
- Adjusted `WebTests.cs` for web frontend changes.
- Updated `AspireSample.Web.csproj` with Redis output caching.
- Implemented database migration and seeding in `Worker.cs`.
- Restructured solution file to include new catalog projects.

--- a/AspireSample/AspireSample.Catalog/appsettings.json
+++ b/AspireSample/AspireSample.Catalog/appsettings.json
@@ -6,9 +6,15 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiEndpoint": "https+http://apiservice",
-  "OTLP_API_KEY": "AspireSampleApiKey",
   "Aspire": {
+    "Npgsql": {
+      "EntityFrameworkCore": {
+        "PostgreSQL": {
+          //"ConnectionString": "Host=myserver;Database=postgresdb;User id=myuser;Password=mypassword",
+          "CommandTimeout": 30
+        }
+      }
+    },
     "StackExchange": {
       "Redis": {
         "ConfigurationOptions": {
@@ -19,5 +25,6 @@
         "DisableTracing": false
       }
     }
-  }
+  },
+  "OTLP_API_KEY": "AspireSampleApiKey"
 }
