--- a/AspireSample/AspireSample.WorkerService/AspireSample.WorkerService.csproj
+++ b/AspireSample/AspireSample.WorkerService/AspireSample.WorkerService.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AspireSample.Catalog.Infrastructure\AspireSample.Catalog.Infrastructure.csproj" />
     <ProjectReference Include="..\AspireSample.ServiceDefaults\AspireSample.ServiceDefaults.csproj" />
   </ItemGroup>
 </Project>
