--- a/AspireSample/AspireSample.Catalog/AspireSample.Catalog.Api.csproj
+++ b/AspireSample/AspireSample.Catalog/AspireSample.Catalog.Api.csproj
@@ -7,10 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.StackExchange.Redis.OutputCaching" Version="9.3.0" />
+	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AspireSample.Catalog.Infrastructure\AspireSample.Catalog.Infrastructure.csproj" />
     <ProjectReference Include="..\AspireSample.ServiceDefaults\AspireSample.ServiceDefaults.csproj" />
   </ItemGroup>
 
