Add Seq logging and enhance project configurations
- Added `Aspire.Hosting.Seq` package reference in `AspireSample.AppHost.csproj`.
- Integrated Seq logging in `Program.cs` with a new endpoint.
- Updated `AspireSample.Catalog.Api.csproj` to include `Aspire.Seq`.
- Modified `appsettings.json` to configure Seq server URL.
- Cleaned up using directives in `Error.cshtml.cs`, `Index.cshtml.cs`, and `Privacy.cshtml.cs`.
- Enhanced error handling in `Worker.cs` for database migration.
- Updated `AspireTutorial.sln` to include `aspire-manifest.json`.
- Added command in `Commands.md` for running the application with a publisher manifest.
- Created `aspire-manifest.json` to define resource configurations for cache, messaging, PostgreSQL, and project references.

--- a/AspireSample/AspireSample.Catalog/appsettings.json
+++ b/AspireSample/AspireSample.Catalog/appsettings.json
@@ -24,6 +24,9 @@
         "DisableHealthChecks": false,
         "DisableTracing": false
       }
+    },
+    "Seq": {
+      "ServerUrl": "http://localhost:5341"
     }
   },
   "OTLP_API_KEY": "AspireSampleApiKey"
