--- a/AspireSample/AspireSample.AppHost/AspireSample.AppHost.csproj
+++ b/AspireSample/AspireSample.AppHost/AspireSample.AppHost.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.2.1" />
     <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="9.3.0" />
     <PackageReference Include="Aspire.Hosting.Redis" Version="9.2.1" />
+    <PackageReference Include="Aspire.Hosting.Seq" Version="9.3.0" />
   </ItemGroup>
 
 </Project>
