--- a/AspireSample/AspireSample.Catalog/AspireSample.Catalog.Api.csproj
+++ b/AspireSample/AspireSample.Catalog/AspireSample.Catalog.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Aspire.Seq" Version="9.3.0" />
 	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
   </ItemGroup>
 
