Add MongoDB support and clear catalog database endpoint
- Updated `AspireSample.AppHost.csproj` to include `Aspire.Hosting.MongoDB` package.
- Implemented catalog database clearing functionality in `DatabaseResourceBuilderExtensions.cs`.
- Added logging for `ResourceReadyEvent` in `LifecycleEvents.cs`.
- Replaced PostgreSQL configuration with MongoDB in `Program.cs`, requiring a password parameter.
- Modified `appsettings.json` to include `PostgresPassword` and MongoDB settings.
- Updated `AspireSample.Catalog.Api.csproj` to include `Aspire.MongoDB.Driver` package.
- Added a new endpoint in `Program.cs` to clear and migrate the catalog database.
- Adjusted HTTP GET request in `WebTests.cs` to use a relative URI.

--- a/AspireSample/AspireSample.Catalog/appsettings.json
+++ b/AspireSample/AspireSample.Catalog/appsettings.json
@@ -15,6 +15,13 @@
         }
       }
     },
+    "MongoDB": {
+      "Driver": {
+        "DisableHealthChecks": false,
+        "HealthCheckTimeout": 10000,
+        "DisableTracing": false
+      }
+    },
     "StackExchange": {
       "Redis": {
         "ConfigurationOptions": {
