--- a/AspireSample/AspireSample.AppHost/appsettings.json
+++ b/AspireSample/AspireSample.AppHost/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "Parameters": {
-    "ApiCacheInvalidationKey": "key"
+    "ApiCacheInvalidationKey": "key",
+    "PostgresPassword": "postgres"
   },
   "ConnectionStrings": {
     "cache": "cache"
