Enhance project structure and modernize C# features
This commit introduces a `Mediator` pattern in the `SharedKernel`, improves service registration in `Program.cs`, and adds a project reference for `SharedKernel`. It also updates formatting and style guidelines in `copilot-instructions.md`, adjusts API endpoint handling in `appsettings.json`, and incorporates modern C# features like file-scoped namespaces and pattern matching.

--- a/AspireSample/AspireSample.Catalog/AspireSample.Catalog.Api.csproj
+++ b/AspireSample/AspireSample.Catalog/AspireSample.Catalog.Api.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AspireSample.Catalog.Infrastructure\AspireSample.Catalog.Infrastructure.csproj" />
     <ProjectReference Include="..\AspireSample.ServiceDefaults\AspireSample.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\SharedKernel\SharedKernel.csproj" />
   </ItemGroup>
 
 </Project>
