--- a/AspireSample/AspireSample.Web/appsettings.json
+++ b/AspireSample/AspireSample.Web/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiEndpoint": "https+http://apiservice",
+  "CatalogApiEndpoint": "https+http://catalogapi",
   "OTLP_API_KEY": "AspireSampleApiKey",
   "Aspire": {
     "StackExchange": {
