Update dependencies and integrate Nuxt.js application
- Upgraded Aspire packages to version 9.3.0 and added `Aspire.Hosting.Keycloak`.
- Introduced `ClamAvResource` for ClamAV functionality and integrated Keycloak for authentication.
- Updated `appsettings.json` with Keycloak parameters and enhanced `Program.cs` for authentication policies.
- Created `AntiVirusService` for file scanning and added `AccessTokenDelegatingHandler` for managing access tokens.
- Configured new Nuxt.js application with necessary dependencies and project structure, including `favicon.ico` and `robots.txt`.
- Updated `.gitignore` for Nuxt.js build outputs and enhanced `README.md` with setup instructions.
- Modified solution file to include the new Nuxt.js project.

--- a/AspireSample/AspireSample.AppHost/appsettings.json
+++ b/AspireSample/AspireSample.AppHost/appsettings.json
@@ -8,7 +8,9 @@
   },
   "Parameters": {
     "ApiCacheInvalidationKey": "key",
-    "PostgresPassword": "postgres"
+    "PostgresPassword": "postgres",
+    "KeycloakUsername": "admin",
+    "KeycloakPassword": "password"
   },
   "ConnectionStrings": {
     "cache": "cache"
