--- a/AspireSample/AspireSample.Web/AspireSample.Web.csproj
+++ b/AspireSample/AspireSample.Web/AspireSample.Web.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.Result" Version="10.1.0" />
+    <PackageReference Include="Aspire.Keycloak.Authentication" Version="9.3.0-preview.1.25265.20" />
     <PackageReference Include="Aspire.StackExchange.Redis.OutputCaching" Version="9.3.0" />
+    <PackageReference Include="nClam" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
