--- a/AspireSample/AspireSample.Catalog/AspireSample.Catalog.Api.csproj
+++ b/AspireSample/AspireSample.Catalog/AspireSample.Catalog.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Aspire.Keycloak.Authentication" Version="9.3.0-preview.1.25265.20" />
 	<PackageReference Include="Aspire.MongoDB.Driver" Version="9.3.0" />
 	<PackageReference Include="Aspire.Seq" Version="9.3.0" />
 	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
