--- a/AspireSample/AspireSample.AppHost/AspireSample.AppHost.csproj
+++ b/AspireSample/AspireSample.AppHost/AspireSample.AppHost.csproj
@@ -15,16 +15,28 @@
     <ProjectReference Include="..\AspireSample.Catalog\AspireSample.Catalog.Api.csproj" />
     <ProjectReference Include="..\AspireSample.Web\AspireSample.Web.csproj" />
     <ProjectReference Include="..\AspireSample.WorkerService\AspireSample.WorkerService.csproj" />
+    <ProjectReference Include="..\ReactApp.Bff\ReactApp.Bff.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.0" />
     <PackageReference Include="Aspire.Hosting.Keycloak" Version="9.3.0-preview.1.25265.20" />
     <PackageReference Include="Aspire.Hosting.MongoDB" Version="9.3.0" />
+    <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.3.0" />
     <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.3.0" />
     <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="9.3.0" />
     <PackageReference Include="Aspire.Hosting.Redis" Version="9.3.0" />
     <PackageReference Include="Aspire.Hosting.Seq" Version="9.3.0" />
   </ItemGroup>
+
+    <Target Name="RestoreNpm" BeforeTargets="Build" Condition=" '$(DesignTimeBuild)' != 'true' ">
+	    <ItemGroup>
+		    <PackageJsons Include="..\*\package.json" />
+	    </ItemGroup>
+
+	    <!-- Install npm packages if node_modules is missing -->
+	    <Message Importance="Normal" Text="Installing npm packages for %(PackageJsons.RelativeDir)" Condition="!Exists('%(PackageJsons.RootDir)%(PackageJsons.Directory)/node_modules')" />
+	    <Exec Command="npm install" WorkingDirectory="%(PackageJsons.RootDir)%(PackageJsons.Directory)" Condition="!Exists('%(PackageJsons.RootDir)%(PackageJsons.Directory)/node_modules')" />
+    </Target>
 
 </Project>
