--- a/AspireSample/ReactApp.Client/package.json
+++ b/AspireSample/ReactApp.Client/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "reactapp-client",
+  "name": "reactapp.client",
   "private": true,
   "type": "module",
   "scripts": {
+    "start": "react-router-serve ./build/server/index.js",
     "build": "react-router build",
     "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
-    "@reduxjs/toolkit": "^2.8.2",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
