--- a/AspireSample/AspireSample.ServiceDefaults/AspireSample.ServiceDefaults.csproj
+++ b/AspireSample/AspireSample.ServiceDefaults/AspireSample.ServiceDefaults.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
 
     <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.5.0" />
     <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.3.0" />
