Enhance .NET app configuration and service management
- Improved Default Service Provider configuration for DI validation.
- 🔒 Updated Kestrel server to remove server header for security.
- 📜 Enabled configuration binding for easier settings management.
- ⚙️ Added host options for concurrent service management and timeouts.
- 🔄 Implemented service lifecycle management for Keycloak, Redis, and PostgreSQL.
- 🌐 Adjusted API endpoints to allow anonymous access.
- 🎨 Integrated React Router and Vue components, including Retool for the admin dashboard.
- 🔗 Updated Vite proxy configuration for API requests.
- 🔑 Enhanced security for handling sensitive information.
- 🧹 Cleaned up code by removing unused sections and comments.

- Tural Hasanov

--- a/AspireSample/AiChatApp/appsettings.json
+++ b/AspireSample/AiChatApp/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
+  "Host": {
+    "ServicesStartConcurrently": true,
+    "ServicesStopConcurrently": true,
+    "StartupTimeout": 45,
+    "ShutdownTimeout": "00:00:45"
+  },
   "AllowedHosts": "*"
 }
