--- a/AspireSample/ReactApp.Client/package.json
+++ b/AspireSample/ReactApp.Client/package.json
@@ -16,6 +16,7 @@
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-retool": "^1.4.0",
     "react-router": "^7.5.3"
   },
   "devDependencies": {
